# AudioFileConverter

./: .gitignore  CMakeLists.txt  README.md
include/: common.h
src/: common.cpp  main.cpp
